--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "morgan": "~1.9.1",
     "nodemailer": "^6.9.6",
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=16.20.1"
   }
 }
